--- a/www/index.html
+++ b/www/index.html
@@ -68,7 +68,14 @@ E</td>
 
       <h2>News</h2>
 
-      <h3>
+	<h3>
+	Wed May 12 14:03:21 CEST 2010
+	</h3>
+
+	Version 2.02 released.<p>
+	Found some old cleanups unreleased. Better redraw of content.
+
+	<h3>
 	Thu Apr 30 10:12:25 CEST 2009
 	</h3>
 
@@ -76,8 +83,8 @@ E</td>
 	Removed shared pixmaps, not needed for wmc2d, but wmc2d didn't worked,
 	where shared pixmap aren't available.
 
-      <h3>
-      Thu Apr 30 00:27:28 CEST 2009
+	<h3>
+	Thu Apr 30 00:27:28 CEST 2009
 	</h3>
 
 	Version 2.0 released.
@@ -91,13 +98,14 @@ E</td>
 
       <h2>Downloads</h2>
 
-      Source Version 2.01 (GIT-d8a73b0)
-      <P><a href="wmc2d-2009-04-30-00.tar.bz2">wmc2d-2009-04-30-00.tar.bz2</a>
+      Source Version 2.02 (GIT-2305b28)
+      <BR><a href="wmc2d-2010-05-12-14.tar.bz2">wmc2d-2010-05-12-14.tar.bz2</a>
 
-      <P>
+      <P>Source Version 2.01 (GIT-d8a73b0)
+      <BR><a href="wmc2d-2009-04-30-00.tar.bz2">wmc2d-2009-04-30-00.tar.bz2</a>
 
-      Source Version 2.00 (GIT-5604023)
-      <P><a href="wmc2d-2009-04-30-00.tar.bz2">wmc2d-2009-04-30-00.tar.bz2</a>
+      <P>Source Version 2.00 (GIT-5604023)
+      <BR><a href="wmc2d-2009-04-30-00.tar.bz2">wmc2d-2009-04-30-00.tar.bz2</a>
 
 
       <p><hr>
