--- a/www/index.html
+++ b/www/index.html
@@ -13,48 +13,20 @@
     <tr>
       <td valign="top">
       <table border="0" cellpadding="2" cellspacing="2" width="100%">
-
-        <tbody>
-
-          <tr>
-
-            <td align="center">H<br>
-
+        <tbody><tr><td align="center"><A href = "..">
+H<br>
 O<br>
-
 M<br>
-
-E</td>
-
-          </tr>
-
-          <tr>
-
-            <td></td>
-
-          </tr>
-
-          <tr>
-
-            <td></td>
-
-          </tr>
-
-          <tr>
-
-            <td></td>
-
-          </tr>
-
-          <tr>
-
-            <td></td>
-
-          </tr>
-
+E</A><P>
+<a href="http://sourceforge.net/projects/wmc2d"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=323918&amp;type=9" alt="[sf.net]" width="80" height="15" title="Get wmc2d at SourceForge.net. Fast, secure and Free Open Source software downloads"/></a><P>
+<A href="http://dockapps.org">visit:<BR>dockapps<BR>.org</A>
+	</td></tr>
+          <tr><td></td></tr>
+          <tr><td></td></tr>
+          <tr><td></td></tr>
+          <tr><td></td></tr>
         </tbody>
       </table>
-
       </td>
 
       <td>
@@ -65,8 +37,22 @@ E</td>
       wmc2d is a dockapp to monitor the core 2 duo temperature and frequency.
       <p>
       License AGPLv3: GNU Affero General Public License version 3
+      <p>
+      This is a small dockapp, which shows the core 2 duo cpu temperatures and
+      the temperature of ACPI thermal zone 0, which is normaly the motherboard
+      temperature.
+      <P>
+      Only libxcb (X C-language Bindings library) and the standard C library
+      are as external libraries required.
 
       <h2>News</h2>
+
+	<h3>
+	Fri May 21 13:01:21 CEST 2010
+	</h3>
+
+	Version 2.03 released.<p>
+	Code cleanups, added support for sleep, while system is idle.
 
 	<h3>
 	Wed May 12 14:03:21 CEST 2010
@@ -98,7 +84,10 @@ E</td>
 
       <h2>Downloads</h2>
 
-      Source Version 2.02 (GIT-2305b28)
+      Source Version 2.03 (GIT-1062ac6)
+      <BR><a href="wmc2d-2010-05-21-12.tar.bz2">wmc2d-2010-05-21-12.tar.bz2</a>
+
+      <P>Source Version 2.02 (GIT-2305b28)
       <BR><a href="wmc2d-2010-05-12-14.tar.bz2">wmc2d-2010-05-12-14.tar.bz2</a>
 
       <P>Source Version 2.01 (GIT-d8a73b0)
@@ -113,15 +102,6 @@ E</td>
 gmx . net</a></address>
 
       <br>
-
-Development hosted on:<br>
-<!--
-      <a href="https://sourceforge.net/projects/corescript/"><img src="http://sf.net/sflogo.php?group_id=&amp;type=5" alt="[SourceForge.net Logo]" border="0" height="62" width="210"></a></td>-->
-
     </tr>
-
   </tbody>
-</table>
-
-</body>
-</html>
+</table></body></html>
