Add man page and documentation cleanups.

--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
   <meta name="author" content="johns98 @ gmx . net">
-  <meta name="description" content="wmc2d core 2 duo temperature/frequency dockapp">
-  <meta name="keywords" content="core 2 duo,linux,dockapp,Development">
-  <title>WMC2D Dockapp Main</title>
+  <meta name="description" content="wmc2d coretemp temperature/corefreq frequency dockapp">
+  <meta name="keywords" content="core 2 single,core 2 duo,core 2 quad,core i3,core i5,core i7,linux,dockapp,development">
+  <title>WMC2D - coretemp/corefreq monitor dockapp - Main</title>
 </head>
 <body alink="#ff0000" bgcolor="#000000" link="#33ccff" text="#ffffff" vlink="#cc6600">
 <table align="center" border="0" cellpadding="0" cellspacing="0" width="780">
@@ -30,7 +30,7 @@ E</A><P>
       </td>
 
       <td>
-      <h1>wmc2d</h1>
+      <h1>WMC2D - coretemp/corefreq monitor dockapp</h1>
 
       <h2>About</h2>
 
@@ -47,7 +47,7 @@ E</A><P>
       thermal zones, which are normaly the motherboard temperature.
       <p>
       All cpus, which are supported by the linux kernel "coretemp" and "cpufreq"
-      modules, could be monitored. f.e. core 2, core i.
+      modules, could be monitored.  f.e. core 2, atom and core iX.
 
       <P>
       Only libxcb (X C-language Bindings library) and the standard C library
@@ -59,7 +59,7 @@ E</A><P>
 	</h3>
 
 	Version 2.04 released.<p>
-	Added support for 'core2' or 'core i' dual or quad core cpu's.<br>
+	Added support for 'core2' or 'core iX' dual or quad core cpu's.<br>
 	Added support to display 0, 1 or 2 thermal zones.<br>
 	Added support to run on any x11 screen.<br>
 	Added support to show turboboost frequency in red color<br>
