--- a/www/index.html
+++ b/www/index.html
@@ -57,6 +57,13 @@ E</A><P>
       are as external libraries required.
 
       <h2>News</h2>
+	<h4>
+	Fri Apr 29 16:58:03 CEST 2011
+	</h4>
+
+	Version 2.05 released.<p>
+	Made compatible with xcb version &gt;= 1.7 and xcb-utils version &gt;= 0.3.8
+
 	<h3>
 	Mon Aug 16 13:30:54 CEST 2010
 	</h3>
@@ -110,7 +117,10 @@ E</A><P>
 
       <h2>Downloads</h2>
 
-      Source Version 2.04 (GIT-7ae51bb)
+      <P>Source Version 2.05 (GIT-0848700)
+      <BR><a href="wmc2d-2011-04-29-17.tar.bz2">wmc2d-2011-04-29-17.tar.bz2</a>
+
+      <P>Source Version 2.04 (GIT-7ae51bb)
       <BR><a href="wmc2d-2010-08-16-13.tar.bz2">wmc2d-2010-08-16-13.tar.bz2</a>
 
       <P>Source Version 2.03 (GIT-1062ac6)
