Fixed file name of CPU core temperatur for newer linux kernels.

--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,10 @@ O<br>
 M<br>
 E</A><P>
 <a href="http://sourceforge.net/projects/wmc2d"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=323918&amp;type=9" alt="[sf.net]" width="80" height="15" title="Get wmc2d at SourceForge.net. Fast, secure and Free Open Source software downloads"/></a><P>
-<A href="http://dockapps.org">visit:<BR>dockapps<BR>.org</A>
+Related:<BR>
+<A href="http://wmcpumon.sourceforge.net">wmcpumon</A><BR>
+<A href="http://wmdia.sourceforge.net">wmdia</A><BR>
+<A href="http://uwm.sourceforge.net">µwm</A><BR>
 	</td></tr>
           <tr><td></td></tr>
           <tr><td></td></tr>
